Insert some analytics query.